# app-security

./: .gitmodules  .test_main.c.swp  CMakeLists.txt  dictionary.h.gch  githubkey  githubkey.pub  spell_check.c  sum  sum.c  wordlist.txt
functiontest/: CMakeLists.txt  main.c
testingfunctions/: CMakeLists.txt  main.cpp
valgrind/: valgrindtest  valgrindtest.c
